fix (compare): fixed out of bounds tree

--- a/packages/ketchup-lite/src/components/kul-compare/styles/kul-compare-main.scss
+++ b/packages/ketchup-lite/src/components/kul-compare/styles/kul-compare-main.scss
@@ -92,6 +92,7 @@
     bottom: 0;
     height: max-content;
     max-height: 50%;
+    overflow: auto;
     position: absolute;
     width: 50%;
     z-index: 2;
